--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 /* Some default styles to make each box visible */
 .box {
   color:white;
-  font-size: 100px;
+  font-size: 50px;
   text-align: center;
   text-shadow:4px 4px 0 rgba(0,0,0,0.1);
   padding:10px;
@@ -29,13 +29,20 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 .container {
   display: flex;
-  border: 10px solid #daa520;
-  height: 100vh;  
-  flex-wrap: wrap-reverse;
 }
 
 .box {
-  width: 300px;
-  height: 2.5em;
-  margin: .05em;
+  flex: 1;
+}
+
+.box3 {
+  order: 1;
+}
+
+.box7 {
+  order: 2;
+}
+
+.box5 {
+  order: 3;
 }
