--- a/src/style.css
+++ b/src/style.css
@@ -78,27 +78,50 @@ body {
 /* https://getflywheel.com/layout/how-to-use-flexbox-to-create-a-modern-card-design-layout/ */
 .cards {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  flex-wrap: wrap;
   border: 2px solid white;
-  background: lightblue;
+  background: lightsteelblue;
   margin-top: 30px;
   padding: 1vh 1vw 1vh 1vw;
 }
 
 .card {
+  flex: 0 1 23%;
+  box-sizing: border-box;
   border: 2px solid white;
-  background: lightcyan;
-  padding: 1vh 1vw 1vh 1vw;
+  background: white;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  flex-basis: 20vw;
-  text-align: center;
-  min-height: 20vh;
 }
 
-.card2 {
+@media screen and (min-width: 40em) {
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+ }
+
+  .card {
+    flex: 0 1 calc(50% - 1em);
+  }
 }
 
+@media screen and (min-width: 60em) {
+  .cards {
+ }
+   
+  .card {
+    flex: 0 1 calc(25% - 1em);
+   }
+}
+
+
+@media screen and (min-width: 52em) {
+  .centered {
+      
+  }
+}
 /* end how-to-use-flexbox-to-create-a-modern-card-design-layout */
 
 
