--- a/src/style.css
+++ b/src/style.css
@@ -48,32 +48,26 @@ body {
 
 .container {
   display: flex;
-  border: 10px solid mistyrose;
-  height: 50vh;
-  align-items: center;
-  flex-direction: column;
-  margin: 1vh 1vw 1vh 1vw;
+}
+
+.box {
+  flex: 1;
+  margin: 0 2vw 0 2vw;
 }
 
 .box1 {
-  font-size: 30px;
+  flex: 2;
 }
 
-.box3 {
-  font-size: 90px;
+.box2 {
+  flex: 2;
 }
 
-.box5 {
-  font-size: 120px;
+.box6 {
+  flex: 4;
 }
 
-.box7 {
-  font-size: 15px;
-}
 
-.box9 {
-  font-size: 300px;
-}
 /* end flexbox.io stuff */
 
 
@@ -95,6 +89,7 @@ body {
   background: white;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  box-shadow: 2px 2px 2px #888888;
 }
 
 @media screen and (min-width: 40em) {
